[gd_scene load_steps=2 format=3 uid="uid://btn548jg8lgow"]

[ext_resource type="Script" path="res://gui/task_tracking/task_spreadsheet/column_header.gd" id="1_tkxta"]

[node name="ColumnHeader" type="PanelContainer"]
offset_right = 12.0
offset_bottom = 12.0
script = ExtResource("1_tkxta")

[node name="MainVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="OptionsPanelContainer" type="PanelContainer" parent="MainVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"PanelContainer_Quinary"

[node name="OptionsHBoxContainer" type="HBoxContainer" parent="MainVBoxContainer/OptionsPanelContainer"]
layout_mode = 2
theme_type_variation = &"HBoxContainer_No_Space"

[node name="PanelContainer" type="PanelContainer" parent="MainVBoxContainer/OptionsPanelContainer/OptionsHBoxContainer"]
layout_mode = 2

[node name="SortingVBoxContainer" type="VBoxContainer" parent="MainVBoxContainer/OptionsPanelContainer/OptionsHBoxContainer/PanelContainer"]
layout_mode = 2

[node name="SortingLabel" type="Label" parent="MainVBoxContainer/OptionsPanelContainer/OptionsHBoxContainer/PanelContainer/SortingVBoxContainer"]
layout_mode = 2
text = "Sorting"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SortingButton" type="Button" parent="MainVBoxContainer/OptionsPanelContainer/OptionsHBoxContainer/PanelContainer/SortingVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "[Modes]"

[node name="OrderPanelContainer" type="PanelContainer" parent="MainVBoxContainer/OptionsPanelContainer/OptionsHBoxContainer"]
layout_mode = 2

[node name="OrderVBoxContainer" type="VBoxContainer" parent="MainVBoxContainer/OptionsPanelContainer/OptionsHBoxContainer/OrderPanelContainer"]
layout_mode = 2

[node name="OrderLabel" type="Label" parent="MainVBoxContainer/OptionsPanelContainer/OptionsHBoxContainer/OrderPanelContainer/OrderVBoxContainer"]
layout_mode = 2
text = "Order"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OrderSpinBox" type="SpinBox" parent="MainVBoxContainer/OptionsPanelContainer/OptionsHBoxContainer/OrderPanelContainer/OrderVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
max_value = 10.0
alignment = 1

[node name="HeaderLabel" type="Label" parent="MainVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Header Title"
horizontal_alignment = 1
vertical_alignment = 1
